Test/p/force-app/main/default/objects/Employee__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Enter Full Address</description>
    <label>Address</label>
    <length>25</length>
    <type>Text</type>
</CustomField>