Test/p/force-app/main/default/objects/Employee__c/fields/Cmpy_Adress__c.field-meta.xml
<CustomField>
    <fullName>Cmpy_Adress__c</fullName>
    <formula>Company__r.Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cmpy Adress</label>
    <type>Text</type>
</CustomField>