Test/p/force-app/main/default/objects/Employee__c/fields/Country_Orgin_India__c.field-meta.xml
<CustomField>
    <fullName>Country_Orgin_India__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Country Orgin India</label>
    <type>Checkbox</type>
</CustomField>