Test/p/force-app/main/default/objects/Employee__c/fields/DateOfJoining__c.field-meta.xml
<CustomField>
    <fullName>DateOfJoining__c</fullName>
    <label>DateOfJoining</label>
    <required>true</required>
    <type>Date</type>
</CustomField>