Test/p/force-app/main/default/objects/Employee__c/fields/EduQualifcation__c.field-meta.xml
<CustomField>
    <fullName>EduQualifcation__c</fullName>
    <label>EduQualifcation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bphramacy</fullName>
            </value>
            <value>
                <fullName>BTech</fullName>
            </value>
            <value>
                <fullName>Degree</fullName>
            </value>
            <value>
                <fullName>Diploma</fullName>
            </value>
            <value>
                <fullName>Intermediate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>