Test/p/force-app/main/default/objects/Employee__c/fields/EmpFullName__c.field-meta.xml
<CustomField>
    <fullName>EmpFullName__c</fullName>
    <label>EmpFullName</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>