Test/p/force-app/main/default/objects/Employee__c/fields/EmpId__c.field-meta.xml
<CustomField>
    <fullName>EmpId__c</fullName>
    <label>EmpId</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>