Test/p/force-app/main/default/objects/Employee__c/fields/EmpLeaves__c.field-meta.xml
<CustomField>
    <fullName>EmpLeaves__c</fullName>
    <label>EmpLeaves</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Morethan 3Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>