Test/p/force-app/main/default/objects/Employee__c/fields/EmpType__c.field-meta.xml
<CustomField>
    <fullName>EmpType__c</fullName>
    <label>EmpType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Permanent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>