Test/p/force-app/main/default/objects/Employee__c/fields/Experience__c.field-meta.xml
<CustomField>
    <fullName>Experience__c</fullName>
    <formula>TODAY()  -  DateOfJoining__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Experience</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>