Test/p/force-app/main/default/objects/Employee__c/fields/Experience_in_Work__c.field-meta.xml
<CustomField>
    <fullName>Experience_in_Work__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Experience in Work</label>
    <type>Checkbox</type>
</CustomField>