Test/p/force-app/main/default/objects/Employee__c/fields/Hobbies__c.field-meta.xml
<CustomField>
    <fullName>Hobbies__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hobbies</label>
    <referenceTo>Hobbies__c</referenceTo>
    <relationshipLabel>Employees</relationshipLabel>
    <relationshipName>Employees</relationshipName>
    <type>Lookup</type>
</CustomField>