Test/p/force-app/main/default/objects/Employee__c/fields/LeaveStatus__c.field-meta.xml
<CustomField>
    <fullName>LeaveStatus__c</fullName>
    <label>LeaveStatus</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SubForApp__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wait for Approval</fullName>
            </value>
            <value>
                <fullName>Submitted for Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>