Test/p/force-app/main/default/objects/Employee__c/fields/NoOf_DaysFor_Leave__c.field-meta.xml
<CustomField>
    <fullName>NoOf_DaysFor_Leave__c</fullName>
    <label>NoOf DaysFor Leave</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>