Test/p/force-app/main/default/objects/Employee__c/fields/SubForApp__c.field-meta.xml
<CustomField>
    <fullName>SubForApp__c</fullName>
    <defaultValue>true</defaultValue>
    <label>SubForApp</label>
    <type>Checkbox</type>
</CustomField>