Test/p/force-app/main/default/objects/Employee__c/fields/Test__c.field-meta.xml
<CustomField>
    <fullName>Test__c</fullName>
    <label>Test</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>