Test/p/force-app/main/default/objects/Employee__c/fields/Test_rollup__c.field-meta.xml
<CustomField>
    <fullName>Test_rollup__c</fullName>
    <description>testing the roll-up summary</description>
    <label>Test rollup</label>
    <summaryForeignKey>Skill_set__c.EMPLOYEE__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>