Test/p/force-app/main/default/objects/Employee__c/fields/Which_Company__c.field-meta.xml
<CustomField>
    <fullName>Which_Company__c</fullName>
    <label>Which Company</label>
    <length>15</length>
    <type>Text</type>
</CustomField>