Test/p/force-app/main/default/objects/Employee__c/fields/Years_of_Expereience__c.field-meta.xml
<CustomField>
    <fullName>Years_of_Expereience__c</fullName>
    <label>Years of Expereience</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Experience_in_Work__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>