Test/p/force-app/main/default/objects/Employee__c/recordTypes/Permenent.recordType-meta.xml
<RecordType>
    <fullName>Permenent</fullName>
    <active>true</active>
    <description>Job position is Applying for</description>
    <label>Permenent</label>
</RecordType>