Test/p/force-app/main/default/objects/Employee__c/validationRules/Rule1.validationRule-meta.xml
<ValidationRule>
    <fullName>Rule1</fullName>
    <active>true</active>
    <errorConditionFormula>(ISCHANGED( EmpType__c ))</errorConditionFormula>
    <errorDisplayField>EmpType__c</errorDisplayField>
    <errorMessage>Do not change the value</errorMessage>
</ValidationRule>